--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-netlify-cms": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
-    "netlify-cms": "^1.9.3"
+    "netlify-cms": "^1.9.3",
+    "react-helmet": "^5.2.0"
   }
 }
